src/negative_test_cases/Testcases/arith1.stl
int main()
{
	int i;
	float j;
	int k = i + 2.0;
	return k;
}
